# apgi-research

./: .apgi_settings.json  .bandit.yml  .coverage  .gitignore  AL-2-Plan.md  AL-Plan.md  ALGORITH-2.md  ALGORITH.md  APGI_COMPLIANCE_ANALYSIS.md  APGI_IMPLEMENTATION_REVIEW.md  APGI_System.py  APGI_USAGE_GUIDE.md  Alignment.md  Auto-Improve.md  GUI-auto_improve_experiments.py  GUI_auto_improve_experiments.py  Makefile  ORIGINAL-README.md  README.md  REPORT.md  TEST-COVERAGE.md  TESTING-COVERAGE.md  TODO.md  USAGE.md  analyze_experiments.py  apgi-autoresearch.skill  apgi_analysis_report.html  apgi_audit.py  apgi_authz.py  apgi_cli.py  apgi_compliance.py  apgi_config.py  apgi_config_schema.py  apgi_data_retention.py  apgi_double_dissociation.py  apgi_errors.py  apgi_implementation_template.py  apgi_integration.py  apgi_logging.py  apgi_metrics.py  (+112 more)
.apgi_checkpoints/: test_exp_10.json  test_exp_50.json
.claude/: settings.local.json
.github/workflows/: ci.yml
data/: states.json
docs/: ADR_0001_APGI_Design_Choices.md  AL-Plan.md  ALGORITH-2.md  ALGORITHM.md  APGI-COMPLIANCE.md  APGI-USAGE-GUIDE.md  APGI_IMPLEMENTATION_AUDIT_2026-04-24.md  APGI_IMPLEMENTATION_EVALUATION.md  APGI_IMPLEMENTATION_REVIEW_2026-04-24.md  API_MIGRATION.md  App-Design-Guide.md  Design-Guide.md  Experiment-Design-Choices.md  Iowa-Gambling-Task.md  Maturity-Matrix.md  Operational-Playbooks.md  QUICK-START.md  README.md  Runbooks.md  TESTING.md
experiments/: __init__.py  base_experiment.py  experiment_apgi_integration.py  migrate_prepare_files.py  migrate_runners.py  migrate_runners_v2.py  prepare_ai_benchmarking.py  prepare_artificial_grammar_learning.py  prepare_attentional_blink.py  prepare_binocular_rivalry.py  prepare_change_blindness.py  prepare_drm_false_memory.py  prepare_dual_n_back.py  prepare_eriksen_flanker.py  prepare_go_no_go.py  prepare_inattentional_blindness.py  prepare_interoceptive_gating.py  prepare_iowa_gambling_task.py  prepare_masking.py  prepare_metabolic_cost.py  prepare_multisensory_integration.py  prepare_navon_task.py  prepare_posner_cueing.py  prepare_probabilistic_category_learning.py  prepare_serial_reaction_time.py  prepare_simon_effect.py  prepare_somatic_marker_priming.py  prepare_sternberg_memory.py  prepare_stop_signal.py  prepare_stroop_effect.py  prepare_time_estimation.py  prepare_virtual_navigation.py  prepare_visual_search.py  prepare_working_memory_span.py  run_ai_benchmarking.py  run_artificial_grammar_learning.py  run_attentional_blink.py  run_binocular_rivalry.py  run_change_blindness.py  run_change_blindness_full_apgi.py  (+26 more)
progress/: test_exp_test_participant_progress.json  test_exp_test_participant_progress.pkl  test_experiment_test_participant_progress.json
test_reports/: test_summary.json
tests/: __init__.py  conftest.py  coverage_config.py  gui_test_results.json  test_APGI_System.py  test_adversarial_apgi_core.py  test_analyze_experiments.py  test_apgi_benchmarks.py  test_apgi_compliance.py  test_apgi_compliance_comprehensive.py  test_apgi_compliance_missing_lines.py  test_apgi_compliance_missing_lines_temp.py  test_apgi_config.py  test_apgi_config_complete.py  test_apgi_config_comprehensive.py  test_apgi_config_enhanced.py  test_apgi_config_schema.py  test_apgi_data_retention.py  test_apgi_data_retention_comprehensive.py  test_apgi_double_dissociation.py  test_apgi_errors.py  test_apgi_exception_paths.py  test_apgi_implementation_template.py  test_apgi_integration.py  test_apgi_logging.py  test_apgi_metrics.py  test_apgi_metrics_comprehensive.py  test_apgi_numerical_invariants.py  test_apgi_orchestration_kernel.py  test_apgi_orchestration_kernel_comprehensive.py  test_apgi_profiler.py  test_apgi_protocols.py  test_apgi_security.py  test_apgi_security_adapters.py  test_apgi_stress.py  test_apgi_system_enhanced.py  test_apgi_timeout_abstraction.py  test_apgi_unit.py  test_apgi_validation.py  test_apgi_version.py  (+54 more)
utils/: __init__.py  apgi_audit.py  apgi_authz.py  apgi_compliance.py  apgi_config.py  apgi_data_retention.py  apgi_errors.py  apgi_security.py  apgi_timeout_abstraction.py  apgi_validation.py  apgi_version.py  delete_pycache.py  git_operations.py  matplotlib_backend.py  mutation_testing.py  performance_monitoring.py
visualization_helpers/: README.md  __init__.py  metrics_processor.py  panel_generators.py
