[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous pretraining research swarm"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "GitPython>=3.1.0",
    "customtkinter>=5.0.0",
    "kernels>=0.11.7",
    "litellm>=1.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "Pillow>=9.5.0",
    "tiktoken>=0.11.0",
    "torch==2.9.1",
    "tqdm>=4.65.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform != 'darwin' or platform_machine != 'arm64'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
